changes in html,script.js,style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PDF Processing Tool</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -44,6 +44,9 @@
 
         <p id="convertedValue">Converted Value: --</p>
       </fieldset>
+
+      <input type="hidden" id="fromUnit" name="fromUnit">
+      <input type="hidden" id="toUnit" name="toUnit">
 
       <button type="submit">Process</button>
     </form>
