--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
       </select>
 
       <label>Rename Output File(s):</label>
-      <input type="text" id="outputName" name="outputName" placeholder="e.g., results">
+      <input type="text" id="outputName" name="outputName" placeholder="e.g., output.pdf / output.xlsx" required>
 
       <fieldset>
         <legend>Unit Conversion (optional)</legend>
