Refactor code structure for improved readability and maintainability

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,13 +14,13 @@
 
       <label>Select Operation:</label>
       <select id="operation" name="operation" required>
-        <option value="">--Choose--</option>
+        <option value="">---Select Option---</option>
         <option value="numbering">Generate Numbered PDF</option>
         <option value="tolerance">Extract Tolerances</option>
       </select>
 
       <label>Rename Output File(s):</label>
-      <input type="text" id="outputName" name="outputName" placeholder="e.g., output.pdf / output.xlsx" required>
+      <input type="text" id="outputName" name="outputName" placeholder="e.g., output.pdf / output.xlsx" >
 
       <fieldset>
         <legend>Unit Conversion (optional)</legend>
